ing.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-hw03
spec:
  rules:
  - host: svidal....
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: svc-hw03
            port:
              number: 80
